# satelite_image_change_detection

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  run_pipeline.py
docs/: method.md  project_report_template.md
outputs1/result/: metrics.json
outputs1/results/: metrics.json
outputs2/results/: metrics.json
outputs3/results/: metrics.json
scripts/: generate_synthetic_pair.py
src/city_change/: __init__.py  change_detection.py  config.py  io_utils.py  pipeline.py  registration.py  segmentation.py  visualization.py
